--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Testing</h1>
+    <div class="card">
+        <h1>Jack Machesky</h1>
+        <h2>Information Science Student</h2>
+        <ul>
+            <li><a href=""><image src="twitter.png" alt="Twitter"></image>Twitter</a></li>
+            <li><a href="">Github</a></li>
+            <li><a href="">Email</a></li>
+        </ul>
+    </div>
 </body>
 </html>
