--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h2>Information Science Student</h2>
         <ul>
             <li><a href=""><image src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9rGKz3271BbN7JR6hRCPF-K9MpnPkyXb0VbUDBn_FcA&s alt="Twitter"></image>Twitter</a></li>
-            <li><a href="">Github</a></li>
-            <li><a href="">Email</a></li>
+            <li><a href=""><image src="https://avatars.githubusercontent.com/u/9919?s=280&v=4" alt="Github"></image>Github</a></li>
+            <li><a href=""><image src="https://i.pinimg.com/originals/1b/3b/ec/1b3bec070f7bb1c007dbaaeafaeb21b7.png" alt="Email"></image>Email</a></li>
         </ul>
     </div>
 </body>
