--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="card">
+        <img class="avatar" id="jmachesky-avatar" src="headshot.jpg" alt="headshot">
         <h1>Jack Machesky</h1>
         <h2>Information Science Student</h2>
         <ul>
